--- a/backend/package.json
+++ b/backend/package.json
@@ -25,9 +25,13 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.10.1",
+    "@types/pdfkit": "^0.14.0",
+    "@types/stream-buffers": "^3.0.7",
     "bcrypt": "^6.0.0",
+    "pdfkit": "^0.17.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stream-buffers": "^3.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
