--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,10 +35,12 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.523.0",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
+    "react-pdf": "^10.0.1",
     "react-router": "^7.6.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
