--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.523.0",
     "next-themes": "^0.4.6",
