--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.523.0",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.3.31",
