--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.58.1",
     "react-pdf": "^10.0.1",
     "react-router": "^7.6.2",
+    "recharts": "^3.0.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
