--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
     "react-pdf": "^10.0.1",
+    "react-resizable-panels": "^3.0.3",
     "react-router": "^7.6.2",
     "recharts": "^3.0.2",
     "sonner": "^2.0.5",
