--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "handlebars": "^4.7.8",
+    "i18next": "^25.3.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.523.0",
     "next-themes": "^0.4.6",
@@ -45,6 +47,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
+    "react-i18next": "^15.5.3",
     "react-pdf": "^10.0.1",
     "react-resizable-panels": "^3.0.3",
     "react-router": "^7.6.2",
