--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
       - "80:80"
     environment:
       - DATABASE_URL=postgresql://invoicerr:invoicerr@invoicerr_db:5432/invoicerr_db
+      - APP_URL="https://invoicerr.example.com"
+      - SMTP_HOST="smtp-relay.example.com"
+      - SMTP_USER="username@example.com"
+      - SMTP_FROM="user-from@example.com" # Not required if SMTP_USER is the same as SMTP_FROM
+      - SMTP_PASSWORD="your_smtp_password"
     depends_on:
       - invoicerr_db
 
