✨ feat: update Docker image reference to use GitHub Container Registry

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   invoicerr:
-    image: imprevisible/invoicerr:latest
+    image: ghcr.io/impre-visible/invoicerr:main
     ports:
       - "80:80"
     environment:
