--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     environment:
       - DATABASE_URL=postgresql://invoicerr:invoicerr@invoicerr_db:5432/invoicerr_db
 
-      - APP_URL="https://invoicerr.example.com" # Required for email templates, as it redirects to the app
+      - APP_URL=https://invoicerr.example.com # Required for email templates, as it redirects to the app
 
       # Required for email features
-      - SMTP_HOST="smtp-relay.example.com"
+      - SMTP_HOST=smtp-relay.example.com
       - SMTP_USER="username@example.com"
       - SMTP_FROM="user-from@example.com" # Not required if SMTP_USER is the same as SMTP_FROM
       - SMTP_PASSWORD="your_smtp_password"
