✨ feat: add Cypress end-to-end testing setup - Create GitHub Actions workflow for Cypress tests - Add PostgreSQL service configuration for testing - Update README with instructions for running e2e tests - Modify backend and frontend start scripts for test environment - Remove obsolete docker-compose.test.yml file - Add dotenv-cli and cross-env dependencies for environment management

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -5,7 +5,8 @@
     "cypress": "^15.3.0"
   },
   "scripts": {
-    "cypress:open": "ts-node start-local.ts"
+    "e2e:open": "cypress open",
+    "e2e:run": "cypress run"
   },
   "dependencies": {
     "child_process": "^1.0.2",
