--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "start:test": "dotenv -e .env.test -- nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -33,6 +34,7 @@
     "@types/stream-buffers": "^3.0.7",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "cross-env": "^10.1.0",
     "date-fns": "^4.1.0",
     "handlebars": "^4.7.8",
     "jose": "^6.0.12",
@@ -60,6 +62,7 @@
     "@types/node": "^22.10.7",
     "@types/puppeteer": "^5.4.7",
     "@types/supertest": "^6.0.2",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
