🧪 tests: enhance Cypress testing setup - Add custom command for user login - Implement custom command to reset the database - Update Cypress configuration to use 'before:run' event for database reset - Create new end-to-end test for company settings - Update TypeScript definitions for custom commands - Modify tsconfig to include Cypress directory

--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -10,6 +10,6 @@
     "skipLibCheck": true,
     "types": ["cypress", "node"]
   },
-  "include": ["**/*.ts", "**/*.tsx", "e2e/**/*.ts"],
-    "exclude": ["node_modules"]
+  "include": ["**/*.ts", "**/*.tsx", "e2e/**/*.ts", "cypress"],
+  "exclude": ["node_modules"]
 }
