🛂 chore: update database configuration for testing - Change PostgreSQL user, password, and database name in Cypress workflow - Update DATABASE_URL in backend environment file for consistency

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -14,9 +14,9 @@ jobs:
       postgres-test:
         image: postgres:16
         env:
-          POSTGRES_USER: testuser
-          POSTGRES_PASSWORD: testpass
-          POSTGRES_DB: invoicerr_test
+          POSTGRES_USER: invoicerr
+          POSTGRES_PASSWORD: invoicerr
+          POSTGRES_DB: invoicerr_db
         ports:
           - "5433:5432"
         options: >-
