--- a/backend/.env.test
+++ b/backend/.env.test
@@ -1,4 +1,4 @@
 NODE_ENV=test
-DATABASE_URL="postgresql://testuser:testpass@localhost:5433/invoicerr_test"
-APP_URL=http://localhost:6284 # Required for email templates, as it redirects to the app
+DATABASE_URL="postgresql://invoicerr:invoicerr@localhost:5433/invoicerr_db"
+APP_URL=http://localhost:6284
 PORT=4000
