✨ feat: enhance authentication security - Add isHttps property to AuthController for secure cookie handling - Set secure flag for cookies based on isHttps value

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -62,5 +62,5 @@ jobs:
         with:
           name: cypress-videos-screenshots
           path: |
-            e2e/cypress/videos
-            e2e/cypress/screenshots
+            ${{ github.workspace }}/e2e/cypress/videos
+            ${{ github.workspace }}/e2e/cypress/screenshots
