🔧 chore: update backend logging in Cypress workflow - Redirect backend logs to a specific log file - Add step to upload backend logs after execution

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -52,9 +52,16 @@ jobs:
 
       - name: Run backend, frontend & tests
         run: |
-          (cd $GITHUB_WORKSPACE/backend && npm run start:test > /dev/null 2>&1 &)
+          (cd $GITHUB_WORKSPACE/backend && npm run start:test > $GITHUB_WORKSPACE/logs/backend.log 2>&1 &)
           (cd $GITHUB_WORKSPACE/frontend && npm run start:test > /dev/null 2>&1 &)
           (cd $GITHUB_WORKSPACE/e2e && npm run e2e:run)
+
+      - name: Upload backend logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-logs
+          path: ${{ github.workspace }}/logs/backend.log
 
       - name: Upload Cypress videos and screenshots
         if: failure()
