--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ dist-ssr
 backend/prisma/db.sqlite
 backend/prisma/generated
 e2e/cypress/fixtures/session.json
+
+e2e/cypress/videos/*
+!e2e/cypress/videos/.gitkeep
