✨ feat: add mailpit service to Cypress workflow and configure SMTP settings in test environment

--- a/backend/.env.test
+++ b/backend/.env.test
@@ -2,3 +2,11 @@ NODE_ENV=test
 DATABASE_URL="postgresql://invoicerr:invoicerr@localhost:5433/invoicerr_db"
 APP_URL=http://localhost:6284
 PORT=4000
+
+
+SMTP_HOST="localhost" # Change this to your SMTP host
+SMTP_USER="test@local.dev" # Change this to your SMTP user
+SMTP_FROM="test@local.dev" # Change this to your email address (not required if SMTP_USER is the same)
+SMTP_PASSWORD="" # Change this to your SMTP password
+SMTP_PORT=1025 # Change this to your SMTP port (default is 587 for TLS)
+SMTP_SECURE=false # Set to true if your SMTP server requires a secure connection (default is false)
