--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,7 +18,12 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@/*": ["src/*"],
+      "@/*": [
+        "src/*"
+      ],
     }
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
 }
