✨ feat: integrate DocuSeal provider with plugin configuration and management features

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "license": "AGPL-3.0-only",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -21,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@documenso/sdk-typescript": "^0.4.0",
     "@fin.cx/einvoice": "^5.1.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
