--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -61,6 +61,8 @@ jobs:
       - name: Run backend, frontend & tests
         run: |
           mkdir -p $GITHUB_WORKSPACE/logs
+          npm install -D dotenv-cli
+          (cd $GITHUB_WORKSPACE/backend && npx dotenv -e .env.test -- npx prisma migrate dev > /dev/null 2>&1)
           (cd $GITHUB_WORKSPACE/backend && npm run start:test > $GITHUB_WORKSPACE/logs/backend.log 2>&1 &)
           (cd $GITHUB_WORKSPACE/frontend && npm run start:test > /dev/null 2>&1 &)
           (cd $GITHUB_WORKSPACE/e2e && npm run e2e:run)
