--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "NodeNext",
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
@@ -21,7 +21,8 @@
       "@/*": [
         "src/*"
       ],
-    }
+    },
+    "moduleResolution": "nodenext"
   },
   "include": [
     "src/**/*"
