--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - invoicerr_db
 
   invoicerr_db:
-    image: postgres:latest
+    image: postgres:15
     environment:
       POSTGRES_USER: invoicerr
       POSTGRES_PASSWORD: invoicerr
