--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "generate": "prisma generate",
+    "migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.940.0",
@@ -31,7 +33,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.0",
-    "@prisma/client": "6.15.0",
+    "@prisma/adapter-pg": "^7.1.0",
     "@teever/ez-hook": "npm:@jsr/teever__ez-hook@^0.3.5",
     "@types/pdfkit": "^0.14.0",
     "@types/stream-buffers": "^3.0.7",
@@ -39,12 +41,14 @@
     "cookie-parser": "^1.4.7",
     "cross-env": "^10.1.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "handlebars": "^4.7.8",
     "jose": "^6.0.12",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-openidconnect": "^0.1.2",
     "pdfkit": "^0.17.1",
+    "pg": "^8.16.3",
     "puppeteer": "^24.11.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -57,6 +61,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@prisma/client": "^7.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.0",
@@ -72,13 +77,14 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "prisma": "6.15.0",
+    "prisma": "^7.1.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   },
