🔧 config: Update Cypress workflow to include Prisma generate and migrate commands

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -41,6 +41,8 @@ jobs:
         run: |
           cd backend
           npm ci
+          DATABASE_URL="postgresql://invoicerr:invoicerr@localhost:5433/invoicerr_db" npx prisma generate
+          DATABASE_URL="postgresql://invoicerr:invoicerr@localhost:5433/invoicerr_db" npx prisma migrate deploy
 
       - name: Install frontend dependencies
         run: |
