--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,20 +7,23 @@ on:
     branches:
       - test/workflow
 
+env:
+  REGISTRY: ghcr.io
+
 jobs:
-  build-multiarch:
+  prepare:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
+    outputs:
+      repo-name-lower: ${{ steps.set-vars.outputs.repo-name-lower }}
+      image-tag: ${{ steps.set-vars.outputs.image-tag }}
+      cache-ref: ${{ steps.set-vars.outputs.cache-ref }}
+      registry-image: ${{ steps.set-vars.outputs.registry-image }}
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set repo name, image tag and cache ref
+      - name: Set variables
         id: set-vars
         run: |
           REPO_NAME_LOWER=$(echo "${GITHUB_REPOSITORY}" | tr '[:upper:]' '[:lower:]')
+          REGISTRY_IMAGE="${{ env.REGISTRY }}/${REPO_NAME_LOWER}"
           GIT_REF="${GITHUB_REF:-${{ github.ref }}}"
 
           if [[ "$GIT_REF" == refs/tags/* ]]; then
@@ -39,34 +42,83 @@ jobs:
           echo "repo-name-lower=$REPO_NAME_LOWER" >> $GITHUB_OUTPUT
           echo "image-tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
           echo "cache-ref=$CACHE_REF" >> $GITHUB_OUTPUT
+          echo "registry-image=$REGISTRY_IMAGE" >> $GITHUB_OUTPUT
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3
+  build:
+    needs: prepare
+    runs-on: ${{ matrix.runner }}
+    permissions:
+      contents: read
+      packages: write
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - platform: linux/amd64
+            runner: ubuntu-24.04
+          - platform: linux/arm64
+            runner: ubuntu-24.04-arm
+          - platform: linux/arm/v7
+            runner: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: docker/setup-qemu-action@v3
+      
+      - uses: docker/setup-buildx-action@v3
+
+      - uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          buildkitd-config-inline: |
-            [worker.oci]
-              max-parallelism = 8
-
-      - name: Build and push multi-arch image
+      - id: build
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
-          tags: ghcr.io/${{ steps.set-vars.outputs.repo-name-lower }}:${{ steps.set-vars.outputs.image-tag }}
-          platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
-          cache-from: type=gha,mode=max,scope=${{ steps.set-vars.outputs.cache-ref }}
-          cache-to: type=gha,mode=max,scope=${{ steps.set-vars.outputs.cache-ref }}
+          platforms: ${{ matrix.platform }}
+          outputs: type=image,name=${{ needs.prepare.outputs.registry-image }},push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=${{ needs.prepare.outputs.cache-ref }}-${{ matrix.platform }}
+          cache-to: type=gha,mode=max,scope=${{ needs.prepare.outputs.cache-ref }}-${{ matrix.platform }}
 
-      - name: Display build summary
+      - run: |
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+      
+      - uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ strategy.job-index }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  merge:
+    runs-on: ubuntu-latest
+    needs: [prepare, build]
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          path: /tmp/digests
+          pattern: digests-*
+          merge-multiple: true
+      
+      - uses: docker/setup-buildx-action@v3
+      
+      - uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - working-directory: /tmp/digests
         run: |
-          echo "✅ Build completed successfully!"
-          echo "  Image pushed: ${{ steps.set-vars.outputs.repo-name-lower }}:${{ steps.set-vars.outputs.image-tag }}"
-          echo "  Cache scope used: ${{ steps.set-vars.outputs.cache-ref }}"
-          echo "  Platforms built: linux/amd64, linux/arm64/v8, linux/arm/v7"
+          docker buildx imagetools create -t ${{ needs.prepare.outputs.registry-image }}:${{ needs.prepare.outputs.image-tag }} \
+            $(printf '${{ needs.prepare.outputs.registry-image }}@sha256:%s ' *)          
+
+      - run: |
+          docker buildx imagetools inspect ${{ needs.prepare.outputs.registry-image }}:${{ needs.prepare.outputs.image-tag }}
