✨ feat: Integrate better-auth for authentication management and remove legacy auth context

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,6 +13,7 @@ SMTP_PASSWORD="XXXXX" # Change this to your SMTP password
 SMTP_PORT=587 # Change this to your SMTP port (default is 587 for TLS)
 SMTP_SECURE=false # Set to true if your SMTP server requires a secure connection (default is false)
 
+BETTER_AUTH_URL="http://localhost:3000"
 
 # OIDC Configuration (example for Authentik)
 OIDC_ISSUER="https://auth.chevrier.dev"
@@ -24,9 +25,6 @@ OIDC_USERINFO_ENDPOINT="https://auth.chevrier.dev/userinfo"
 OIDC_TOKEN_REVOKE_ENDPOINT="https://auth.chevrier.dev/revoke"
 OIDC_END_SESSION_ENDPOINT="https://auth.chevrier.dev/end_session"
 OIDC_JWKS_URI="https://auth.chevrier.dev/.well-known/jwks.json"
-
-# Callback URL for OIDC
-OIDC_CALLBACK_URL="https://invoicerr.chevrier.dev/api/auth/callback"
 
 # Client ID and Secret for OIDC
 OIDC_CLIENT_ID="your-client-id"
