--- a/backend/package.json
+++ b/backend/package.json
@@ -35,9 +35,11 @@
     "@nestjs/schedule": "^6.0.0",
     "@prisma/adapter-pg": "^7.1.0",
     "@teever/ez-hook": "npm:@jsr/teever__ez-hook@^0.3.5",
+    "@thallesp/nestjs-better-auth": "^2.2.0",
     "@types/pdfkit": "^0.14.0",
     "@types/stream-buffers": "^3.0.7",
     "bcrypt": "^6.0.0",
+    "better-auth": "^1.4.5",
     "cookie-parser": "^1.4.7",
     "cross-env": "^10.1.0",
     "date-fns": "^4.1.0",
