--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
 
       # OIDC Configuration (example for Authentik)
       - OIDC_ISSUER="https://auth.chevrier.dev"
+      - OIDC_NAME="Pocket ID"
       # Endpoints for OIDC
       - OIDC_AUTHORIZATION_ENDPOINT="https://auth.chevrier.dev/authorize"
       - OIDC_TOKEN_ENDPOINT="https://auth.chevrier.dev/token"
@@ -26,13 +27,9 @@ services:
       - OIDC_TOKEN_REVOKE_ENDPOINT="https://auth.chevrier.dev/revoke"
       - OIDC_END_SESSION_ENDPOINT="https://auth.chevrier.dev/end_session"
       - OIDC_JWKS_URI="https://auth.chevrier.dev/.well-known/jwks.json"
-      # Callback URL for OIDC
-      - OIDC_CALLBACK_URL="https://invoicerr.chevrier.dev/api/auth/callback"
       # Client ID and Secret for OIDC
       - OIDC_CLIENT_ID="your-client-id"
       - OIDC_CLIENT_SECRET="your-client-secret"
-
-      - VITE_OIDC_ENDPOINT=https://invoicerr.chevrier.dev/api/auth/oidc/login # If present, display OIDC login option in the frontend
 
       # Optional, but recommended for docker deployments
       - JWT_SECRET="your_jwt_secret" # Used for JWT authentication, can be any random string
